--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@faker-js/faker": "^7.3.0",
     "axios": "^0.26.1",
     "cors": "^2.8.5",
+    "cryptr": "^6.0.3",
+    "dayjs": "^1.11.3",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-async-errors": "^3.1.1",
